--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,36 @@
 body {
     height: 100%;
     width: 100%;
-    background-color: teal;
-    color: white;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
+.j-c {
+    justify-content: center;
+}
+
+.a-c {
+    align-items: center;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+.fade-in {
+    animation: fade-in ease 1000ms;
+}
+a {
+    text-decoration: none;
 }
